<resources>
    <string name="app_name">DnD Grimoire</string>
    <string name="title_activity_splash_screen">Grimoire</string>
    <string name="email">jvfronton@gmail.com</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Ajustes</string>

    <string name="menu_characters">Personajes</string>
    <string name="menu_spells">Hechizos</string>
    <string name="menu_classes">Clases</string>
    <string name="menu_races">Razas</string>
    <string name="character">Personaje</string>
    <string name="abilities">Características</string>
    <string name="skills">Habilidades</string>
    <string name="mod">MOD</string>
    <string name="skill">Habilidad</string>
    <string name="ac">CA</string>
    <string name="hp">PG</string>
    <string name="speed">VELOCIDAD</string>

    <string name="name">Nombre</string>
    <string name="alignment">Alineamiento</string>
    <string name="appearance">Apariencia</string>
    <string name="personality">Personalidad</string>
    <string name="background">Trasfondo</string>

    <string name="next">Siguiente</string>
    <string name="confirm">Confirmar</string>

    <string name="calc">Cálculo de características</string>
    <string name="base_score">Puntuación base</string>
    <string name="total_score">Puntuación total</string>
    <string name="racial_mod">Modificador racial</string>
    <string name="details">Detalles</string>

    <string name="clazz">Clase</string>
    <string name="race">Raza</string>
    <string name="race_align">Alineamiento</string>
    <string name="race_age">Edad</string>
    <string name="race_size">Tamaño</string>
    <string name="desc">Descripción</string>

    <string name="str">Fuerza</string>
    <string name="dex">Destreza</string>
    <string name="cons">Constitución</string>
    <string name="intel">Inteligencia</string>
    <string name="wis">Sabiduría</string>
    <string name="cha">Carisma</string>
</resources>
