<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/fragment_characters"
            android:icon="@drawable/ic_characters"
            android:title="@string/menu_characters" />
    </group>

    <group>
        <!--        <item-->
        <!--            android:id="@+id/fragment_spells"-->
        <!--            android:icon="@drawable/ic_spells"-->
        <!--            android:title="@string/menu_spells" />-->

        <item
            android:id="@+id/fragment_classes"
            android:icon="@drawable/ic_classes"
            android:title="@string/menu_classes" />

        <item
            android:id="@+id/fragment_races"
            android:icon="@drawable/ic_races"
            android:title="@string/menu_races" />
    </group>
</menu>
